4주차 설명 추가

--- a/dm_class_02.ipynb
+++ b/dm_class_02.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "33d1c570",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Datamining Class"
    ]
@@ -11,15 +15,64 @@
   {
    "cell_type": "markdown",
    "id": "76c48f23",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# 차원 축소"
    ]
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "## 데이터 요약과 차원 축소\n",
+    "### 데이터 요약\n",
+    "* 데이터 요약은 데이터 탐색의 중요한 구성 요소\n",
+    "* 요약 통계(평균, 중앙값 등) 및 그래픽 요약\n",
+    "* 일반적인 요약 통계\n",
+    "- 평균, 중앙값, 최소값, 최댓값, 표준편차, 개수 및 백분율\n",
+    "\n",
+    "### 차원 축소\n",
+    "* 고차원의 원본 데이터를 저차원의 부분 공간으로 투영하여 데이터를 축소하는 방법\n",
+    "* 정확도의 희생을 최소로 하여 독립 변수 또는 입력 변수의 차원을 축소하는 방법을 찾는 것\n",
+    "* 요인 선택 또는 특징 추출\n",
+    "* 데이터의 정보를 더 작은 하위 집합으로 압축하는 데 유용\n",
+    "* 유사한 범주를 결합하여 범주형 변수를 줄일 수 있음"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 차원 축소 방법\n",
+    "* 주어진 데이터에 도메인 지식을 적용해 범주를 제거하거나 결합하기\n",
+    "* 데이터 요약을 사용해 변수 간 중복 정보를 검출하고 불필요한 변수 및 범주를 제거하거나 합치기\n",
+    "* 데이터 변환 기술을 사용해 범주형 변수를 수치형 변수로 변환하기\n",
+    "* 주성분 분석(PCA) 같은 자동화된 차원 축소 기술을 사용하기\n",
+    "- 주성분 분석은 원래 수치 데이터셋을 더 적은 변수에 대부분의 원래 정보를 포함하는 원래 데이터의 더 작은 가중 셋으로 변환"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
    "id": "80fa51de",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# 주성분 분석(PCA)"
    ]
@@ -28,7 +81,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "8d1ecf05",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -205,7 +262,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "e30ff2c9",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# calories와 weight 열 추출\n",
@@ -220,7 +281,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "694122e1",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# 주성분 분석\n",
@@ -232,7 +297,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "f4eee39f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -258,7 +327,11 @@
   {
    "cell_type": "markdown",
    "id": "6dd9cb7a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## 성능 평가"
    ]
@@ -267,7 +340,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "384a9c29",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -296,7 +373,11 @@
   {
    "cell_type": "markdown",
    "id": "cb70d75b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### 예측 성능 평가\n",
     "* 검증 데이터를 기반으로 모든 케이스에 대해 예측 정확도를 평가해 학습 데이터보다 좀 더 객관적인 근거 제공\n",
@@ -310,7 +391,11 @@
   {
    "cell_type": "markdown",
    "id": "14346ad7",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### 예측 정확성 판단 척도\n",
     "* MAE(평균 절대 오차/편차) = 평균 절대 오차의 규모\n",
@@ -323,7 +408,11 @@
   {
    "cell_type": "markdown",
    "id": "00a981f5",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### 모델의 정확성 척도"
    ]
@@ -332,7 +421,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "335f617a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -554,7 +647,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "4a17c2c5",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# 출력 변수와 텍스트 열을 제거하여 예측 변수 목록을 만듦\n",
@@ -570,7 +667,11 @@
   {
    "cell_type": "markdown",
    "id": "cc775057",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### 학습과 검증 성능의 비교\n",
     "* 학습 데이터셋에서 오차는 모델이 얼마나 잘 적합되었는지 알려줌\n",
@@ -582,7 +683,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "0d552a65",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# 학습 데이터 셋과 검증 데이터 셋에 대한 도요타 가격 예측 오차의 히스토그램과 박스 플롯"
@@ -591,7 +696,11 @@
   {
    "cell_type": "markdown",
    "id": "4b56c4ec",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### 누적 이득과 리프트 차트\n",
     "* 모델의 예측 성능을 예측 변수들을 사용하지 않는 기준 모델과 비교\n",
@@ -604,7 +713,11 @@
   {
    "cell_type": "markdown",
    "id": "4f7c252d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### 분류기 성능의 판단\n",
     "#### 나이브 규칙\n",
@@ -627,7 +740,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "43e708b6",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -635,7 +752,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6e4b38d3",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
