--- a/DM_class_04-mid.ipynb
+++ b/DM_class_04-mid.ipynb
@@ -1644,9 +1644,162 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 74,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variables: age_08_04, km, hp, met_color, automatic, cc, doors, quarterly_tax, weight, fuel_type_Diesel, fuel_type_Petrol\n",
+      "Start: score=10422.30\n",
+      "Step: score=10420.33, remove cc\n",
+      "Step: score=10418.79, remove met_color\n",
+      "Step: score=10417.29, remove doors\n",
+      "Step: score=10417.29, remove None\n",
+      "['age_08_04', 'km', 'hp', 'automatic', 'quarterly_tax', 'weight', 'fuel_type_Diesel', 'fuel_type_Petrol']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 후방 소거법 AIC 기반\n",
+    "def train_model(variables):\n",
+    "    model = LinearRegression()\n",
+    "    model.fit(train_X[variables], train_y)\n",
+    "    return model\n",
+    "\n",
+    "def score_model(model, variables):\n",
+    "    return AIC_score(train_y, model.predict(train_X[variables]), model)\n",
+    "\n",
+    "best_model, best_variables = backward_elimination(train_X.columns, train_model, score_model, verbose= True)\n",
+    "\n",
+    "print(best_variables)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Regression statistics\n",
+      "\n",
+      "                      Mean Error (ME) : 103.3045\n",
+      "       Root Mean Squared Error (RMSE) : 1314.4844\n",
+      "            Mean Absolute Error (MAE) : 1016.8875\n",
+      "          Mean Percentage Error (MPE) : -0.2700\n",
+      "Mean Absolute Percentage Error (MAPE) : 8.9984\n"
+     ]
+    }
+   ],
+   "source": [
+    "regressionSummary(valid_y, best_model.predict(valid_X[best_variables]))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variables: age_08_04, km, hp, met_color, automatic, cc, doors, quarterly_tax, weight, fuel_type_Diesel, fuel_type_Petrol\n",
+      "Start: score=11565.07, constant\n",
+      "Step: score=10689.71, add age_08_04\n",
+      "Step: score=10597.91, add hp\n",
+      "Step: score=10506.08, add weight\n",
+      "Step: score=10445.17, add km\n",
+      "Step: score=10435.58, add quarterly_tax\n",
+      "Step: score=10419.93, add fuel_type_Petrol\n",
+      "Step: score=10418.10, add fuel_type_Diesel\n",
+      "Step: score=10417.29, add automatic\n",
+      "Step: score=10417.29, add None\n",
+      "['age_08_04', 'hp', 'weight', 'km', 'quarterly_tax', 'fuel_type_Petrol', 'fuel_type_Diesel', 'automatic']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 전방 선택 방법\n",
+    "# 초기 모델이 상수 모델이기 때문에 처리가 필요\n",
+    "def train_model(variables):\n",
+    "    if len(variables) == 0:\n",
+    "        return None\n",
+    "    model = LinearRegression()\n",
+    "    model.fit(train_X[variables], train_y)\n",
+    "    return model\n",
+    "\n",
+    "def score_model(model, variables):\n",
+    "    if len(variables) == 0:\n",
+    "        return AIC_score(train_y, [train_y.mean()] * len(train_y), model, df = 1)\n",
+    "    return AIC_score(train_y, model.predict(train_X[variables]), model)\n",
+    "\n",
+    "best_model, best_variables = forward_selection(train_X.columns, train_model, score_model, verbose = True)\n",
+    "\n",
+    "print(best_variables)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 정규화(수축 모델)\n",
+    "* 철저한 검색 = 최상의 하위 집합\n",
+    "* 평가된 예측 변수의 모든 가능한 서브셋\n",
+    "* 가장 일반적인 수축법으로 릿지 회귀와 라쏘\n",
+    "* ** RIdge 회귀에서 패널티는 계수의 제곱합인 L2 패널티를 사용 -> 회귀계수 크기를 0에 근접\n",
+    "* ** 라쏘는 예측 변수 p(절편은 제외)에 대한 절댓값의 합인 L1 패널티 사용\n",
+    "* ** 라쏘 패널티는 효과적으로 일부 계수를 0으로 축소하여 예측 변수의 서브셋을 생성\n",
+    "* 선형 회귀 계수는 오차제곱합 SSE의 학습 데이터셋 합을 최소화하여 계수를 추정하며, 패널티 항이 일부 임계값 t 미만일 수 있음"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 정규화된 선형 회귀를 위한 코드"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "lasso = Lasso(normalize = True, alpha= 1)\n",
+    "lasso.fit(train_X, train_y)\n",
+    "regressionSummary(valid_y, lasso.predict(valid_X))\n",
+    "\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
