--- a/DM_class_04-mid.ipynb
+++ b/DM_class_04-mid.ipynb
@@ -1792,14 +1792,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 83,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Regression statistics\n",
+      "\n",
+      "                      Mean Error (ME) : 104.7566\n",
+      "       Root Mean Squared Error (RMSE) : 1312.7798\n",
+      "            Mean Absolute Error (MAE) : 1017.4997\n",
+      "          Mean Percentage Error (MPE) : -0.2578\n",
+      "Mean Absolute Percentage Error (MAPE) : 9.0084\n",
+      "\n",
+      "Regression statistics\n",
+      "\n",
+      "                      Mean Error (ME) : 114.2331\n",
+      "       Root Mean Squared Error (RMSE) : 3090.0442\n",
+      "            Mean Absolute Error (MAE) : 2324.8119\n",
+      "          Mean Percentage Error (MPE) : -4.0923\n",
+      "Mean Absolute Percentage Error (MAPE) : 19.4053\n",
+      "Lasso-CV chosen regularization:  214695.28400864813\n",
+      "[-0.         -0.06282474  0.          0.          0.          0.33542499\n",
+      "  0.          0.          0.          0.         -0.        ]\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'bayesianRidge' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Input \u001B[1;32mIn [83]\u001B[0m, in \u001B[0;36m<cell line: 13>\u001B[1;34m()\u001B[0m\n\u001B[0;32m     11\u001B[0m ridge \u001B[38;5;241m=\u001B[39m Ridge(alpha \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m1\u001B[39m)\n\u001B[0;32m     12\u001B[0m ridge\u001B[38;5;241m.\u001B[39mfit(train_X, train_y)\n\u001B[1;32m---> 13\u001B[0m regressionSummary(valid_y, \u001B[43mbayesianRidge\u001B[49m\u001B[38;5;241m.\u001B[39mpredict(valid_X))\n\u001B[0;32m     14\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mBaysian ridge chosen regularization\u001B[39m\u001B[38;5;124m'\u001B[39m, bayesianRidge\u001B[38;5;241m.\u001B[39mlambda_ \u001B[38;5;241m/\u001B[39m bayesianRidge\u001B[38;5;241m.\u001B[39malpha_)\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'bayesianRidge' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "lasso = Lasso(normalize = True, alpha= 1)\n",
+    "lasso = Lasso(alpha= 1)\n",
     "lasso.fit(train_X, train_y)\n",
     "regressionSummary(valid_y, lasso.predict(valid_X))\n",
-    "\n"
+    "\n",
+    "lasso_cv = LassoCV(cv = 5)\n",
+    "lasso_cv.fit(train_X, train_y)\n",
+    "regressionSummary(valid_y, lasso_cv.predict(valid_X))\n",
+    "print('Lasso-CV chosen regularization: ', lasso_cv.alpha_)\n",
+    "print(lasso_cv.coef_)\n",
+    "\n",
+    "ridge = Ridge(alpha = 1)\n",
+    "ridge.fit(train_X, train_y)\n",
+    "regressionSummary(valid_y, bayesianRidge.predict(valid_X))\n",
+    "print('Baysian ridge chosen regularization', bayesianRidge.lambda_ / bayesianRidge.alpha_)"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 요약\n",
+    "* 선형 회귀 모델은 설명 모델링뿐만 아니라 예측에도 매우 널리 사용되는 도구\n",
+    "* 좋은 예측 모델은 예측 정확도가 높음(유용한 실제 수준까지)\n",
+    "* 예측 모델은 교육 데이터에 적합하며 예측 정확도는 별도의 검증 데이터셋에서 평가됨\n",
+    "* 중복 예측 변수를 제거하는 것이 예측 정확도와 견고성을 달성하는 데 중요\n",
+    "* 하위 집합 선택 방법은 '좋은' 후보 모델을 찾는 데 도움이 됨. 그런 다음 이를 실행하고 평가해야 함"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
