--- a/DM_class_04-mid.ipynb
+++ b/DM_class_04-mid.ipynb
@@ -1886,7 +1886,11 @@
   {
    "cell_type": "markdown",
    "id": "620b5d55",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## 다중 선형 회귀\n",
     "* 예측 변수와 종속 변수 관계 다음으로 가정"
@@ -1895,7 +1899,11 @@
   {
    "cell_type": "markdown",
    "id": "c63f04dd",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## 회귀를 사용한 설명 모델과 예측 모델의 모델링\n",
     "### 회귀 모델 적합 목적\n",
@@ -1917,7 +1925,11 @@
   {
    "cell_type": "markdown",
    "id": "6632ebd2",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## 회귀식의 추정과 예측\n",
     "### 입력 값이 x1, x2, ... , xp인 레코드의 출력 변수 값 예측\n",
@@ -1931,7 +1943,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "a5dd86ce",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2173,7 +2189,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "f69f1318",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2228,7 +2248,11 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "45b05e35",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2253,7 +2277,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "69f5c731",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# AIC: 모델의 성능지표로서 MSE에 변수 수 만큼 panalty를 주는 지표, 회귀분석에서 model selection할 때 많이 쓰임\n",
@@ -2264,7 +2292,11 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "31c9c851",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2306,7 +2338,11 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "7919cc89",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2343,7 +2379,11 @@
   {
    "cell_type": "markdown",
    "id": "4d6ee8b9",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## 선형 회귀 분석의 변수 선택\n",
     "### 모델에 변수 활용 시 주의 사항\n",
@@ -2374,7 +2414,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "43ea92c3",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
