--- a/DM_class_07-09.ipynb
+++ b/DM_class_07-09.ipynb
@@ -917,6 +917,327 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.tree import DecisionTreeClassifier, DecisionTreeRegressor\n",
+    "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score, GridSearchCV\n",
+    "import matplotlib.pylab as plt\n",
+    "import dmba\n",
+    "from dmba import plotDecisionTree, classificationSummary, regressionSummary"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 분류 회귀 트리\n",
+    "* 가장 명료하며 결과에 대한 해석 용이\n",
+    "* 관측치들을 하위 그룹으로 분리해 나가는 절차의 반복\n",
+    "* 하위 그룹으로의 분할 작업-> 예측 변수 기반\n",
+    "* 재귀적 분할 (Recursive Partitioning) & 가지치기(pruning)\n",
+    "* 모델 생성 이후 대량의 표본을 처리하는 계산 용이함"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classes: Nonowner,Owner\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "'You need to install pydotplus to visualize decision trees'"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mower_df = pd.read_csv('https://raw.githubusercontent.com/reisanar/datasets/master/RidingMowers.csv')\n",
+    "\n",
+    "classTree = DecisionTreeClassifier(random_state = 0, max_depth = 1)\n",
+    "classTree.fit(mower_df.drop(columns = ['Ownership']), mower_df['Ownership'])\n",
+    "\n",
+    "print(\"Classes: {}\".format(','.join(classTree.classes_)))\n",
+    "plotDecisionTree(classTree, feature_names = mower_df.columns[:2], class_names = classTree.classes_)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pydotplus\n",
+      "  Using cached pydotplus-2.0.2.tar.gz (278 kB)\n",
+      "  Preparing metadata (setup.py): started\n",
+      "  Preparing metadata (setup.py): finished with status 'error'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Ignoring invalid distribution -ip (c:\\users\\user\\.conda\\envs\\condapractice\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -illow (c:\\users\\user\\.conda\\envs\\condapractice\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -ip (c:\\users\\user\\.conda\\envs\\condapractice\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -illow (c:\\users\\user\\.conda\\envs\\condapractice\\lib\\site-packages)\n",
+      "  error: subprocess-exited-with-error\n",
+      "  \n",
+      "  python setup.py egg_info did not run successfully.\n",
+      "  exit code: 1\n",
+      "  \n",
+      "  [20 lines of output]\n",
+      "  Traceback (most recent call last):\n",
+      "    File \"<string>\", line 2, in <module>\n",
+      "    File \"<pip-setuptools-caller>\", line 34, in <module>\n",
+      "    File \"C:\\Users\\User\\AppData\\Local\\Temp\\pip-install-67ukf6u0\\pydotplus_791cc04f5a7a4392a3c1f7178ff01c29\\setup.py\", line 55, in <module>\n",
+      "      setup(\n",
+      "    File \"C:\\Users\\User\\.conda\\envs\\condapractice\\lib\\site-packages\\setuptools\\__init__.py\", line 87, in setup\n",
+      "      return distutils.core.setup(**attrs)\n",
+      "    File \"C:\\Users\\User\\.conda\\envs\\condapractice\\lib\\site-packages\\setuptools\\_distutils\\core.py\", line 147, in setup\n",
+      "      _setup_distribution = dist = klass(attrs)\n",
+      "    File \"C:\\Users\\User\\.conda\\envs\\condapractice\\lib\\site-packages\\setuptools\\dist.py\", line 475, in __init__\n",
+      "      _Distribution.__init__(\n",
+      "    File \"C:\\Users\\User\\.conda\\envs\\condapractice\\lib\\site-packages\\setuptools\\_distutils\\dist.py\", line 283, in __init__\n",
+      "      self.finalize_options()\n",
+      "    File \"C:\\Users\\User\\.conda\\envs\\condapractice\\lib\\site-packages\\setuptools\\dist.py\", line 898, in finalize_options\n",
+      "      for ep in sorted(loaded, key=by_order):\n",
+      "    File \"C:\\Users\\User\\.conda\\envs\\condapractice\\lib\\site-packages\\setuptools\\dist.py\", line 897, in <lambda>\n",
+      "      loaded = map(lambda e: e.load(), filtered)\n",
+      "    File \"C:\\Users\\User\\.conda\\envs\\condapractice\\lib\\site-packages\\setuptools\\_vendor\\importlib_metadata\\__init__.py\", line 196, in load\n",
+      "      return functools.reduce(getattr, attrs, module)\n",
+      "  AttributeError: type object 'Distribution' has no attribute '_finalize_feature_opts'\n",
+      "  [end of output]\n",
+      "  \n",
+      "  note: This error originates from a subprocess, and is likely not a problem with pip.\n",
+      "error: metadata-generation-failed\n",
+      "\n",
+      "Encountered error while generating package metadata.\n",
+      "\n",
+      "See above for output.\n",
+      "\n",
+      "note: This is an issue with the package mentioned above, not pip.\n",
+      "hint: See above for details.\n",
+      "WARNING: Ignoring invalid distribution -ip (c:\\users\\user\\.conda\\envs\\condapractice\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -illow (c:\\users\\user\\.conda\\envs\\condapractice\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -ip (c:\\users\\user\\.conda\\envs\\condapractice\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -illow (c:\\users\\user\\.conda\\envs\\condapractice\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -ip (c:\\users\\user\\.conda\\envs\\condapractice\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -illow (c:\\users\\user\\.conda\\envs\\condapractice\\lib\\site-packages)\n"
+     ]
+    }
+   ],
+   "source": [
+    "! pip install pydotplus"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pydotplus'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "Input \u001B[1;32mIn [9]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[1;34m()\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mpydotplus\u001B[39;00m\n\u001B[0;32m      3\u001B[0m classTree \u001B[38;5;241m=\u001B[39m DecisionTreeClassifier(random_state \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m0\u001B[39m)\n\u001B[0;32m      4\u001B[0m classTree\u001B[38;5;241m.\u001B[39mfit(mower_df\u001B[38;5;241m.\u001B[39mdrop(columns \u001B[38;5;241m=\u001B[39m [\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mOwnership\u001B[39m\u001B[38;5;124m'\u001B[39m]), mower_df[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mOwnership\u001B[39m\u001B[38;5;124m'\u001B[39m])\n",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'pydotplus'"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "classTree = DecisionTreeClassifier(random_state = 0)\n",
+    "classTree.fit(mower_df.drop(columns = ['Ownership']), mower_df['Ownership'])\n",
+    "\n",
+    "print('Classes: {}'.format(',', feature_names = mower_df.columns[:2], class_names = classTree.classes_))\n",
+    "plotDecisionTree(classTree, feature_names = mower_df.columns[:2], class_names = classTree.classes_)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 트리 구조\n",
+    "### 기본 구조\n",
+    "* 결정 노드 (Decision Node) : 자식 노드를 가짐, 에측 변수 값만 알고 있는 새로운 관측치를 분류하기 위해 트리 모델을 사용할 경우 관측치를 트리에 떨어져서 적합한 값을 갖는 가지를 통해 트리 아래로 내려 보냄\n",
+    "* 단말 노드 (Terminal Node) : 자식이 없는 노드, 예측 변수에 의한 데이터의 분할"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 의사결정 규칙\n",
+    "* 트리가 적절하다면 모델이 제공하는 결정 기준이 이해하기 쉬움\n",
+    "* ex) 은행 고객들의 대출 신청 승인 모델\n",
+    "* 0은 대출 신청 거부, 1은 승인\n",
+    "\n",
+    "* 분할 노드의 상단 조건 : 분할을 위해 예측값 & 분할값 제공(ex) 상위 노드의 소득 <= 110.5)\n",
+    "* Sample 해당 노드의 레코드 수\n",
+    "* Values 해당 노드에 있는 클래스 개수\n",
+    "* 분류 규칙 살펴보기\n",
+    "* ex) 트리 모델에서 결정 노드 'Family'의 아래 왼쪽 노드?\n",
+    "* --> IF 소득 > 110.5 & 교육 수준 < 1.5 & 가족 수 < 2.5 Then Class = 0 (거부)\n",
+    "\n",
+    "\n",
+    "### 새로운 관측치의 분류\n",
+    "* 관측치를 트리 모델의 위에서 아래로 할당하는 과정\n",
+    "* 새로운 관측치의 클래스는 투표를 통해 결정\n",
+    "\n",
+    "\n",
+    "### 재귀적 분할\n",
+    "* 종속 변수 : Y, 예측 변수 : X1, X2, ,,, Xn\n",
+    "* 분류 문제 -> 모델의 결과 변수가 범주형 변수\n",
+    "* 예측 변수들의 p차원 공간을 서로 겹치지 않는 다차원의 직사각형으로 분할\n",
+    "1. 하나의 변수 Xi 가 선택되고 p차원의 공간을 두 부분으로 분할하게끔 Xi의 변구 값인 Si가 선택\n",
+    "2. 이 중 한 부분은 Xi<=S인 모든 점 포함\n",
+    "3. 나누어진 두 부분 중 한 부분은 마찬가지로 동일한 과정에 의해 다시 한 번 변수를 선정\n",
+    "4. 위의 과정 반복"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "   Income  Lot_Size Ownership  Number\n0    60.0      18.4     Owner       1\n1    85.5      16.8     Owner       2\n2    64.8      21.6     Owner       3\n3    61.5      20.8     Owner       4\n4    87.0      23.6     Owner       5",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Income</th>\n      <th>Lot_Size</th>\n      <th>Ownership</th>\n      <th>Number</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>60.0</td>\n      <td>18.4</td>\n      <td>Owner</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>85.5</td>\n      <td>16.8</td>\n      <td>Owner</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>64.8</td>\n      <td>21.6</td>\n      <td>Owner</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>61.5</td>\n      <td>20.8</td>\n      <td>Owner</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>87.0</td>\n      <td>23.6</td>\n      <td>Owner</td>\n      <td>5</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 잔디깎이 기계 데이터를 로드 및 분할하고 산포도를 그리기 위한 코드\n",
+    "\n",
+    "mower_df['Number'] = mower_df.index + 1\n",
+    "mower_df.head()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Income  Lot_Size Ownership  Number\n",
+      "5    110.1      19.2     Owner       6\n",
+      "3     61.5      20.8     Owner       4\n",
+      "7     82.8      22.4     Owner       8\n",
+      "20    47.4      16.4  Nonowner      21\n",
+      "18    59.4      16.0  Nonowner      19\n",
+      "2     64.8      21.6     Owner       3\n",
+      "4     87.0      23.6     Owner       5\n",
+      "0     60.0      18.4     Owner       1\n",
+      "13    52.8      20.8  Nonowner      14\n",
+      "22    51.0      14.0  Nonowner      23\n",
+      "1     85.5      16.8     Owner       2\n",
+      "16    84.0      17.6  Nonowner      17\n",
+      "6    108.0      17.6     Owner       7\n",
+      "21    33.0      18.8  Nonowner      22     Income  Lot_Size Ownership  Number\n",
+      "12    75.0      19.6  Nonowner      13\n",
+      "14    64.8      17.2  Nonowner      15\n",
+      "11    81.0      20.0     Owner      12\n",
+      "8     69.0      20.0     Owner       9\n",
+      "15    43.2      20.4  Nonowner      16\n",
+      "10    51.0      22.0     Owner      11\n",
+      "17    49.2      17.6  Nonowner      18\n",
+      "19    66.0      18.4  Nonowner      20\n",
+      "23    63.0      14.8  Nonowner      24\n",
+      "9     93.0      20.8     Owner      10\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "   Income  Lot_Size\n0      60        20",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Income</th>\n      <th>Lot_Size</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>60</td>\n      <td>20</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trainData, validData = train_test_split(mower_df, test_size=0.4, random_state=26)\n",
+    "print(trainData, validData)\n",
+    "newHousehold = pd.DataFrame([{'Income':60, 'Lot_Size':20}])\n",
+    "newHousehold"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
